frontend/test/should_pass/basic_064.grg
using basic_model_002;

rule r {
	x : CC;

	replace {
		eval {
			x.ic = 42;
		}
	}
}

