frontend/test/should_fail/model_init_002.grg
using model_init2;

rule r1 {

	replace {
		a : A;
		eval {
			a.i1 = a.i1*2;
		}
	}
}

